[bao cao eContract-mSale] lap trinh bao cao chi tiet eContract

--- a/src/app/main/report/report-contract-number-eContract-mSale/report-contract-number-eContract-mSale.component.scss
+++ b/src/app/main/report/report-contract-number-eContract-mSale/report-contract-number-eContract-mSale.component.scss
@@ -21,6 +21,10 @@
   font-size: 13px;
   margin: 0 10px;
 }
+.row-word {
+  width: 250px;
+  word-break:break-word
+}
 
 :host ::ng-deep {
 .p-treeselect, .p-dropdown {
