cho phep nhap ngay thang nam thay vi kick chon tren lich

--- a/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
+++ b/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
@@ -94,7 +94,7 @@
     <div class="form-group">
       <div class="label_item">{{'expiration-date' | translate}} <span class="require_star">*</span></div>
       <div>
-        <p-calendar [(ngModel)]="this.datasForm.sign_time" [minDate]="minDate" [showIcon]="true" [readonlyInput]="true"
+        <p-calendar [(ngModel)]="this.datasForm.sign_time" [minDate]="minDate" [showIcon]="true" [readonlyInput]="false"
           aria-placeholder="{{'choose.expire.date'| translate}}" dateFormat="dd/mm/yy"></p-calendar>
       </div>
     </div>
