--- a/src/app/main/report/report-contract-number-eContract-mSale/report-contract-number-eContract-mSale.component.html
+++ b/src/app/main/report/report-contract-number-eContract-mSale/report-contract-number-eContract-mSale.component.html
@@ -20,7 +20,7 @@
     <div class="col-md-2">
         <div>{{'completed-date' | translate}} <span style="color: red"> *</span></div>
         <div class="input-line">
-            <p-calendar selectionMode="range" [readonlyInput]="true" [(ngModel)]="date" [showIcon]="true" dateFormat="dd/mm/yy"></p-calendar>
+            <p-calendar selectionMode="range" [readonlyInput]="false" [(ngModel)]="date" [showIcon]="true" dateFormat="dd/mm/yy"></p-calendar>
         </div>
     </div>
 
@@ -76,7 +76,7 @@
               <td>{{data.name}}</td>
               <td style="font-weight: bold;">{{ data.na ? data.na : data.quantity}}</td>
             </tr>
-            
+
         </ng-template>
 
         <!-- <ng-template pTemplate="paginatorleft" let-state>
@@ -87,7 +87,7 @@
         </ng-template> -->
 
         <!-- new version pagination -->
-        
+
         <ng-template pTemplate="paginatorleft" let-state>
           <span style="color: white !important;">{{'chart.number' | translate}}: {{(state.totalRecords <= 0 || state.fisrt <= 0) ? 0 : state.first+1}} - {{(state.first+state.rows)> state.totalRecords ? state.totalRecords : state.first+state.rows}} / {{state.totalRecords}}</span>
         </ng-template>
