--- a/src/app/main/report/contract-number-follow-type/contract-number-follow-type.component.html
+++ b/src/app/main/report/contract-number-follow-type/contract-number-follow-type.component.html
@@ -4,12 +4,12 @@
         <div class="col-md-2">
             <div>{{'organization' | translate}}</div>
             <div class="input-line">
-            <p-treeSelect 
-                [(ngModel)]="selectedNodeOrganization" 
-                placeholder="{{'all' | translate}}" 
-                [filter]="true" 
-                filterBy="name"  
-                [droppable]="true" 
+            <p-treeSelect
+                [(ngModel)]="selectedNodeOrganization"
+                placeholder="{{'all' | translate}}"
+                [filter]="true"
+                filterBy="name"
+                [droppable]="true"
                 [options]="listOrgCombobox"
             >
           </p-treeSelect>
@@ -20,8 +20,8 @@
         <div class="col-md-2">
             <div>{{ 'create-date' | translate}}<span style="color: red"> *</span></div>
             <div class="input-line">
-                <p-calendar selectionMode="range" [readonlyInput]="true" [(ngModel)]="date" [showIcon]="true" dateFormat="dd/mm/yy"
-                          
+                <p-calendar selectionMode="range" [readonlyInput]="false" [(ngModel)]="date" [showIcon]="true" dateFormat="dd/mm/yy"
+
                 ></p-calendar>
             </div>
         </div>
@@ -30,13 +30,13 @@
         <!-- <div class="col-md-2">
             <div>{{'contract.status' | translate}}</div>
             <div class="input-line">
-                <p-dropdown 
+                <p-dropdown
                     panelStyleClass="font"
                     appendTo="body"
                     optionLabel="name"
-                    optionValue="id" 
-                    placeholder="{{'all' | translate}}" 
-                    [showClear]="true"  
+                    optionValue="id"
+                    placeholder="{{'all' | translate}}"
+                    [showClear]="true"
                     [options]="optionsStatus"
                     [(ngModel)] = "contractStatus"
                 ></p-dropdown>
@@ -105,7 +105,7 @@
             </ng-template>
         </p-table>
     </div>
-    
+
 </div>
 
 <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-spin-clockwise">
