--- a/src/app/main/report/report-detail/report-detail.component.html
+++ b/src/app/main/report/report-detail/report-detail.component.html
@@ -4,12 +4,12 @@
         <div class="col-md-2">
             <div>{{'organization' | translate}}</div>
             <div class="input-line">
-            <p-treeSelect 
-                [(ngModel)]="selectedNodeOrganization" 
-                placeholder="{{'all' | translate}}" 
-                [filter]="true" 
-                filterBy="name"  
-                [droppable]="true" 
+            <p-treeSelect
+                [(ngModel)]="selectedNodeOrganization"
+                placeholder="{{'all' | translate}}"
+                [filter]="true"
+                filterBy="name"
+                [droppable]="true"
                 [options]="listOrgCombobox"
             >
           </p-treeSelect>
@@ -20,8 +20,8 @@
         <div class="col-md-2">
             <div>{{ 'create-date' | translate}} <span style="color: red"> *</span></div>
             <div class="input-line">
-                <p-calendar selectionMode="range" [readonlyInput]="true" [(ngModel)]="date" [showIcon]="true" dateFormat="dd/mm/yy"
-                          
+                <p-calendar selectionMode="range" [readonlyInput]="false" [(ngModel)]="date" [showIcon]="true" dateFormat="dd/mm/yy"
+
                 ></p-calendar>
             </div>
         </div>
@@ -30,13 +30,13 @@
         <div class="col-md-2">
             <div>{{'contract.status' | translate}}</div>
             <div class="input-line">
-                <p-dropdown 
+                <p-dropdown
                     panelStyleClass="font"
                     appendTo="body"
                     optionLabel="name"
-                    optionValue="id" 
-                    placeholder="{{'all' | translate}}" 
-                    [showClear]="true"  
+                    optionValue="id"
+                    placeholder="{{'all' | translate}}"
+                    [showClear]="true"
                     [options]="optionsStatus"
                     [(ngModel)]="contractStatus"
                     [autoDisplayFirst]="false"
@@ -54,7 +54,7 @@
 
     <!--Bảng dữ liệu-->
     <div class="row" style="padding-top: 20px;">
-        <p-table #dt [value]="list" [paginator]="true" [rows]="15" id="table" [autoLayout]="true" [scrollable]="true" 
+        <p-table #dt [value]="list" [paginator]="true" [rows]="15" id="table" [autoLayout]="true" [scrollable]="true"
         scrollDirection="horizontal">
 
             <!--header-->
@@ -103,7 +103,7 @@
 
                         <td class="row-word">{{list.customer.organization.name}}</td>
                         <td class="row-word">{{list.customer.email}}</td>
-                        
+
                         <td class="row-word">{{this.getValue(list,0,'type')}}</td>
                         <td class="row-word">{{this.getValue(list,0,'name')}}</td>
                         <td class="row-word">{{this.getName(list,0,'view')}}</td>
@@ -113,16 +113,16 @@
                         <ng-container *ngFor="let i of getNumberArray(this.maxParticipants - 1)">
                             <td class="row-word">{{this.getValue(list,i,'type')}}</td>
                             <td class="row-word">{{this.getValue(list,i,'name')}}</td>
-                            <td class="row-word">{{this.getName(list,i,'coor')}}</td> 
+                            <td class="row-word">{{this.getName(list,i,'coor')}}</td>
                             <td class="row-word">{{this.getName(list,i,'view')}}</td>
                             <td class="row-word">{{this.getName(list,i,'sign')}}</td>
-                            <td class="row-word">{{this.getName(list,i,'doc')}}</td> 
+                            <td class="row-word">{{this.getName(list,i,'doc')}}</td>
                         </ng-container>
                     </ng-container>
                 </tr>
             </ng-template>
 
-            
+
             <ng-template  pTemplate="paginatorleft" let-state>
                 <span style="color: white !important;">{{'chart.number' | translate}}: {{state.first <= 0 && state.totalRecords <= 1? 0:state.first + 1}} - {{(state.first+state.rows)> state.totalRecords ? (state.totalRecords > 0 ? state.totalRecords - 1 : 0) : state.first+state.rows}} / {{state.totalRecords > 0 ? state.totalRecords - 1 : 0}}</span>
               </ng-template>
@@ -131,7 +131,7 @@
             </ng-template>
         </p-table>
     </div>
-    
+
 </div>
 
 <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-spin-clockwise">
