--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
@@ -143,7 +143,7 @@
       <div class="form-group">
         <div class="label_item">{{'expire.date.contract' | translate}}</div>
         <div>
-          <p-calendar [(ngModel)]="expire_time" [minDate]="minDate" [showIcon]="true" [readonlyInput]="true"
+          <p-calendar [(ngModel)]="expire_time" [minDate]="minDate" [showIcon]="true" [readonlyInput]="false"
             dateFormat="dd/mm/yy"></p-calendar>
         </div>
       </div>
