[Update - processingContract] Hiển thị loại ký bcy ở màn hđ chờ ký

--- a/src/app/main/contract-signature/contract-signature.component.html
+++ b/src/app/main/contract-signature/contract-signature.component.html
@@ -129,6 +129,7 @@
                                         <span *ngIf="item.sign_type.length > 0 && item.sign_type[0].id == 4" class="status_blue">{{'sign_by_hsm' | translate}}</span>
                                         <span *ngIf="item.sign_type.length > 0 && item.sign_type[0].id == 5" class="status_blue">{{'sign_by_eKYC' | translate}}</span>
                                         <span *ngIf="item.sign_type.length > 0 && item.sign_type[0].id == 6" class="status_blue">{{'sign_by_cert' | translate}}</span>
+                                        <span *ngIf="item.sign_type.length > 0 && item.sign_type[0].id == 7" class="status_blue">Ký số bằng Token Ban Cơ Yếu</span>
                                         <span *ngIf="item.sign_type.length == 0 && item.role == 1" class="status_blue">{{'contract.lead' | translate}}</span>
                                     </div>
                                 </div>
