fix phân quyền danh sách hợp đồng tổ chức của tôi

--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -92,24 +92,12 @@
             <p-calendar selectionMode="range" [readonlyInput]="true" [(ngModel)]="date" [showIcon]="true" dateFormat="dd/mm/yy" (onSelect)="searchCountCreate()"></p-calendar>
           </div>
           
-          <div style="padding-top: 10px;" *ngIf="isOrg=='on'">
+          <div style="padding-top: 10px;" *ngIf="isOrg=='on' && this.isQLHD_03">
               <p-treeSelect [(ngModel)]="selectedNodeOrganization" [options]="list" placeholder="{{'all' | translate}}" [filter]="true" filterBy="name"  [droppable]="true" (onNodeSelect)="search()"></p-treeSelect>
           </div>
         </div>
-        <!-- <div class="row" style="margin: 0 1%">
-          <div class="col-md-6">
-          </div>
-          <div class="col-md-6" style="display: flex; justify-content: flex-end; flex-wrap: wrap; padding: 12px">
-            <div class="row" style="width: 100%; text-align: right;">
-              <span>SL hợp đồng đã sử dụng: 10000</span>
-            </div>
-            <div class="row" style="width: 100%; text-align: right">
-              <span>SL hợp đồng đã mua: 10000</span>
-            </div>
-          </div>
-        </div> -->
         
-        <div class="row">
+        <div class="row" *ngIf="this.isOrg == 'off' || (this.isOrg == 'on' && (this.isQLHD_03 || this.isQLHD_04))">
           <div class="col-md-12">
             <div *ngIf="totalCreate == 0"
               style="height:500px;display: table;top: 0;left: 0;width: 100%;text-align: center;">
@@ -123,6 +111,10 @@
               <div style="text-align: center;">{{'chart.contract.created' | translate}}</div>
             </div>
           </div>
+        </div>
+
+        <div class="row" *ngIf="(this.isOrg == 'on' && (!this.isQLHD_03 || !this.isQLHD_04))">
+          <div style="margin-left: 20px;">{{'my.org.not.authen' | translate}}</div>
         </div>
 
       </div>
