--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -113,7 +113,7 @@
           </div>
         </div>
 
-        <div class="row" *ngIf="(this.isOrg == 'on' && (!this.isQLHD_03 || !this.isQLHD_04))">
+        <div class="row" *ngIf="(this.isOrg == 'on' && (!this.isQLHD_03 && !this.isQLHD_04))">
           <div style="margin-left: 20px;">{{'my.org.not.authen' | translate}}</div>
         </div>
 
