--- a/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
+++ b/src/app/main/contract/shared/sign-sample-contract/sign-contract/sign-contract.component.html
@@ -19,7 +19,7 @@
 </div>
 
 <div [ngStyle]="getStyleText(sign)" class="text-sign" *ngIf="(sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu') && signTemplate">
-  <span *ngIf="getSpecifiedHandle()" class="font-style" id="input-text">{{getText(sign)}}</span>
+  <span *ngIf="getStyleText(sign)" class="font-style" id="input-text">{{getText(sign)}}</span>
 
   <input *ngIf="sign.sign_unit == 'text' && sign.is_have_text" id="input-text-value" placeholder="Nhập nội dung Text.."
     [(ngModel)]="sign.value" type="text" (click)="reverseInput($event, sign)" (blur)="changeInput($event, sign)" (ngxInputSearch)="doTheSearch($event,'text')" style="white-space: nowrap;">
