chia 2 tab hop dong cua toi va hop dong cua to chuc voi hop dong da thanh ly

--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -1,4 +1,4 @@
-<p-selectButton *ngIf="filter_status!=40" [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="changeTab()">
+<p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (click)="changeTab()">
     <ng-template #options let-item>
         <span style="margin: auto;width: 50%;">{{item.label | translate}}</span>
     </ng-template>
