fix danh sách khi phân quyền ko có vai trò xem hợp đồng của tổ chức

--- a/src/app/main/contract-folder/current-folder/add-contract-folder/add-contract-folder.component.html
+++ b/src/app/main/contract-folder/current-folder/add-contract-folder/add-contract-folder.component.html
@@ -31,7 +31,7 @@
               <div class="col-md-2">{{'create-date' | translate}}</div>
               <div class="col-md-2">{{'expiration-date' | translate}}</div>
 
-              <div class="col-md-2">
+              <div class="col-md-2 item_icon">
                 <input id="allDownload" name="allDownload" type="checkbox" [(ngModel)]="checkedAll" (click)="toggleAll(checkedAll)"/>
             </div>
           </div>
