--- a/src/app/main/contract-folder/current-folder/add-contract-folder/add-contract-folder.component.html
+++ b/src/app/main/contract-folder/current-folder/add-contract-folder/add-contract-folder.component.html
@@ -86,11 +86,11 @@
                     <div class="col-md-2 item_icon">
                         <div style="display: flex; justify-content: center;">
                             <div class="div_icon">
-                                <div class="col-md-1 calendar_create">
+                                <!-- <div class="col-md-1 calendar_create"> -->
                                     <div>
                                         <input [(ngModel)]="item.checked" name="item" type="checkbox" value="{{item.contractId}}" (change)="selectContract(item)" />
                                     </div>
-                                </div>
+                                <!-- </div> -->
                             </div>
                         </div>
                     </div>
