--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -38,7 +38,7 @@
                             <div class="item_contract_name">
                                 <a class="item_contract_name" style="text-decoration: none;" (click)="isQLHD_07?openDetail(item.id):null" [routerLink]="['/main/form-contract/detail', item.id]" [queryParams]="{
                                             'page': this.p,
-                                            'filter_type': this.filter_type, 
+                                            'filter_type': this.filter_type,
                                             'filter_contract_no': this.filter_contract_no,
                                             'filter_from_date': this.filter_from_date,
                                             'filter_to_date': this.filter_to_date,
@@ -97,7 +97,7 @@
                         <div class="div_icon" *ngIf="(status == 'processing' || status == 'expire' || status == 'complete') && isQLHD_12">
                             <img src="../../assets/img/icon_view_connect.svg" class="img_icon" ngbTooltip="{{'contract.connect.view' | translate}}" (click)="contractConnect(item.id)" />
                         </div>
-                        <!-- 
+                        <!--
                             <div class="div_icon" *ngIf="status == 'processing' || status == 'expire'">
                                 <img src="../../assets/img/icon_add_connect.svg" class="img_icon" ngbTooltip="{{'contract.connect.add' | translate}}" (click)="addContractConnect(item.id)"/>
                             </div> -->
@@ -157,7 +157,7 @@
             <div class="footer_pagination">
                 <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
             </div>
-            <div class="footer_page_number">{{'chart.number' | translate}}: {{this.getPageStartEnd()}} / {{pageTotal}} 
+            <div class="footer_page_number">{{'chart.number' | translate}}: {{this.getPageStartEnd()}} / {{pageTotal}}
             </div>
         </div>
     </ng-template>
@@ -166,7 +166,10 @@
 </div>
 
 <!--Truong hop khac-->
-<div *ngIf="!((this.filter_status == 20 || this.filter_status == 33 || this.filter_status == 30 ||  this.typeDisplay =='release') && this.isOrg == 'off')" class="container-fluid">
+<div *ngIf="!((this.filter_status == 20 ||
+               this.filter_status == 33 ||
+               this.filter_status == 30 ||
+               this.typeDisplay =='release') && this.isOrg == 'off') && status != 'complete'" class="container-fluid">
     <ng-template [ngIf]="!roleMess">
         <div class="col-md-12" style="padding-top: 20px;">
             <div class="input-line search">
@@ -197,7 +200,7 @@
                             <div class="item_contract_name">
                                 <a class="item_contract_name" style="text-decoration: none;" (click)="isQLHD_07?openDetail(item.id):null" [routerLink]="['/main/form-contract/detail', item.id]" [queryParams]="{
                                         'page': this.p,
-                                        'filter_type': this.filter_type, 
+                                        'filter_type': this.filter_type,
                                         'filter_contract_no': this.filter_contract_no,
                                         'filter_from_date': this.filter_from_date,
                                         'filter_to_date': this.filter_to_date,
@@ -308,6 +311,128 @@
     <div>{{roleMess | translate}}</div>
 </div>
 
+<!-- Màn HĐ hoàn thành HĐ của tổ chức-->
+<div *ngIf="!((this.filter_status == 20 ||
+              this.filter_status == 33 ||
+              this.filter_status == 30 ||
+              this.typeDisplay =='release') && this.isOrg == 'off')
+              && this.typeDisplay !== 'downloadMany' && status == 'complete'" class="container-fluid">
+    <ng-template [ngIf]="!roleMess">
+        <div class="col-md-12" style="padding-top: 20px;">
+            <div class="input-line search">
+                <img src="../../assets/img/icon_search.svg" class="input-img" />
+                <input type="text" id="filter_name" [value]="filter_name" class="input-text" placeholder="{{'contract.search.name.placeholder' | translate}}" (keyup)="autoSearch($event)" />
+                <img src="../../assets/img/icon_search_group.svg" class="input-img" (click)="searchContract()" />
+            </div>
+        </div>
+
+        <div class="col-md-1 btn_search" style="padding-top: 10px;">
+          <button *ngIf="this.typeDisplay === 'view'" (click)="downloadMany()" class="btn btn-lg btn-block btn_submit">{{'download.multi'|translate}}</button>
+        </div>
+
+        <div class="row list_header" *ngIf="pageTotal > 0;">
+            <div class="col-md-4"></div>
+            <div class="col-md-2">{{'create-date' | translate}}</div>
+            <div class="col-md-2">{{'expiration-date' | translate}}</div>
+            <div class="col-md-3">{{'action' | translate}}</div>
+        </div>
+
+
+        <div class="item_contract" *ngFor="let item of contracts | paginate:{itemsPerPage: page, currentPage:p, totalItems: pageTotal}">
+            <div class="row">
+                <!--Cột 1-->
+                <div class="col-md-4">
+                    <div class="row">
+                        <div class="col-md-11">
+                            <div class="item_contract_name">
+                                <a class="item_contract_name" style="text-decoration: none;" (click)="isQLHD_07?openDetail(item.id):null" [routerLink]="['/main/form-contract/detail', item.id]" [queryParams]="{
+                                        'page': this.p,
+                                        'filter_type': this.filter_type,
+                                        'filter_contract_no': this.filter_contract_no,
+                                        'filter_from_date': this.filter_from_date,
+                                        'filter_to_date': this.filter_to_date,
+                                        'isOrg': this.isOrg,
+                                        'organization_id': this.organization_id,
+                                        'status': this.status
+                                      }">
+                                    {{item.name}}
+                                </a>
+                            </div>
+
+                            <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
+                                <div class="item_contract_infor">{{'side' | translate}} {{getNameOrganization(itemPar, index)}}
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="item_contract_infor">{{'contract.status' | translate}}:
+                                    <span class="status_blue">{{this.filter_status | pipe | translate}}
+                                        {{getNameStatusCeca(item.status, item.ceca_push, item.ceca_status) |
+                                        translate}}</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!--Cột 2: Ngày tạo-->
+                <div class="col-md-2 calendar_create">
+                    <div><i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.created_at | date:
+                            'dd/MM/yyyy HH:mm'}}</span></div>
+                </div>
+
+                <!--Cột 3: Ngày hết hạn ký-->
+                <div class="col-md-2 calendar_deadline">
+                    <div style="display: flex; justify-content: center;">
+                        <div class="div_icon"><i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.sign_time | date:
+                                'dd/MM/yyyy'}}</span></div>
+                        <!--34: quá hạn cho phép sửa ngay hết hạn-->
+                        <div *ngIf="this.filter_status == 34" class="div_icon"><img src="../../assets/img/icon_edit.svg" class="img_icon" ngbTooltip="{{'edit.exp.sign.time' | translate}}" (click)="openEditExpiration(item)" />
+                        </div>
+                    </div>
+                </div>
+
+                <!--Cột 4: Thao tác-->
+                <div class="col-md-3 item_icon">
+                    <div style="display: flex; justify-content: center;">
+                        <div class="div_icon" *ngIf="status == 'complete' && this.isOrg == 'on'">
+                          <img src="../../assets/img/icon_download.svg" class="img_icon" ngbTooltip="{{'contract.download' | translate}}" (click)="downloadContract(item.id);" />
+                        </div>
+
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div *ngIf="pageTotal == 0" style="height: 100px;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
+            <div style="display: table-cell;vertical-align: middle;">
+                <img src="../../../assets/img/empty_data.svg" />
+                <div style="color: #94A7C6">{{'no.data' | translate}}</div>
+            </div>
+        </div>
+
+        <div class="contract_footer">
+            <div class="footer_contract_per_page">
+                <div>Hiển thị&nbsp;</div>
+                <select [(ngModel)]="this.page" (change)="changePageNumber($event)">
+                    <option value="" hidden>10</option>
+                    <option *ngFor="let d of this.pageOptions">{{d}}</option>
+                </select>
+                <div>&nbsp;{{'contracts.per.page' | translate}}</div>
+            </div>
+            <div class="footer_title"></div>
+            <div class="footer_pagination">
+                <pagination-controls *ngIf="pageTotal > 0;" (pageChange)="p=$event; getContractList()" previousLabel="" nextLabel=""></pagination-controls>
+            </div>
+            <div class="footer_page_number">{{'chart.number' | translate}}: {{this.getPageStartEnd()}} / {{pageTotal}}
+            </div>
+        </div>
+    </ng-template>
+
+    <div>{{roleMess | translate}}</div>
+</div>
 
 <div *ngIf="(this.filter_status == 30 && this.isOrg == 'off' && this.typeDisplay === 'view')" class="container-fluid">
     <ng-template [ngIf]="!roleMess">
@@ -339,7 +464,7 @@
                             <div class="item_contract_name">
                                 <a class="item_contract_name" style="text-decoration: none;" (click)="isQLHD_07?openDetail(item.id):null" [routerLink]="['/main/form-contract/detail', item.id]" [queryParams]="{
                                         'page': this.p,
-                                        'filter_type': this.filter_type, 
+                                        'filter_type': this.filter_type,
                                         'filter_contract_no': this.filter_contract_no,
                                         'filter_from_date': this.filter_from_date,
                                         'filter_to_date': this.filter_to_date,
@@ -450,6 +575,9 @@
     <div>{{roleMess | translate}}</div>
 </div>
 
+
+
+
 <div *ngIf="(this.typeDisplay == 'downloadMany' && this.filter_status == 30)">
     <div class="container-fluid">
         <ng-template [ngIf]="!roleMess">
@@ -487,7 +615,7 @@
                                 <div class="item_contract_name">
                                     <a class="item_contract_name" style="text-decoration: none;" (click)="isQLHD_07?openDetail(item.id):null" [routerLink]="['/main/form-contract/detail', item.id]" [queryParams]="{
                                             'page': this.p,
-                                            'filter_type': this.filter_type, 
+                                            'filter_type': this.filter_type,
                                             'filter_contract_no': this.filter_contract_no,
                                             'filter_from_date': this.filter_from_date,
                                             'filter_to_date': this.filter_to_date,
@@ -551,6 +679,9 @@
                             </div>
                             <div class="div_icon" *ngIf="status == 'complete' && this.isOrg == 'off'">
                                 <img src="../../assets/img/icon_download.svg" class="img_icon" ngbTooltip="{{'contract.download' | translate}}" (click)="downloadContract(item.id);" />
+                            </div>
+                            <div class="div_icon" *ngIf="status == 'complete' && this.isOrg == 'on'">
+                              <img src="../../assets/img/icon_download.svg" class="img_icon" ngbTooltip="{{'contract.download' | translate}}" (click)="downloadContract(item.id);" />
                             </div>
                             <div class="div_icon" *ngIf="status == 'complete' && isQLHD_13 && this.isOrg == 'off'">
                                 <img src="../../assets/img/icon_share.svg" class="img_icon" ngbTooltip="{{'contract.share' | translate}}" (click)="shareContract(item.id);" />
@@ -638,7 +769,7 @@
                                 <div class="item_contract_name">
                                     <a class="item_contract_name" style="text-decoration: none;" (click)="isQLHD_07?openDetail(item.id):null" [routerLink]="['/main/form-contract/detail', item.id]" [queryParams]="{
                                             'page': this.p,
-                                            'filter_type': this.filter_type, 
+                                            'filter_type': this.filter_type,
                                             'filter_contract_no': this.filter_contract_no,
                                             'filter_from_date': this.filter_from_date,
                                             'filter_to_date': this.filter_to_date,
