fix lệch all với scroll

--- a/src/app/main/contract-folder/current-folder/add-contract-folder/add-contract-folder.component.scss
+++ b/src/app/main/contract-folder/current-folder/add-contract-folder/add-contract-folder.component.scss
@@ -280,4 +280,5 @@
     max-height: 600px; 
     overflow-y: auto; /* Thêm thanh cuộn khi cần */
     overflow-x: hidden;
+    max-width: 1200px;
   }
