--- a/src/styles.scss
+++ b/src/styles.scss
@@ -108,7 +108,7 @@ body { margin: 0; font-family: font_lexend_deca , Roboto, "Helvetica Neue", sans
 .long-text-ellipsis {
   overflow: hidden;
   white-space: nowrap;
-  width: inherit;
+  // width: inherit;
   text-overflow: ellipsis;
   max-width: 113px;
 }
