--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -698,7 +698,7 @@
                             <div class="div_icon">
                                 <div class="col-md-1 calendar_create">
                                     <div>
-                                        <input name="item" type="checkbox" [(ngModel)]="item.checked" (click)="toggleOneDownload(item)" />
+                                        <input name="item" type="checkbox" [(ngModel)]="item.checked" (click)="toggleOneDownload(item)"(change)="selectContract(item)" />
                                     </div>
                                 </div>
                             </div>
