them button doc tat ca thong bao

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -20,7 +20,9 @@
           <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="drop_menu" style="width: 500px;overflow: hidden auto;max-height: 315px;">
             <div style="display: flex; justify-content: space-between;">
               <div class="title_notification">{{'no.list' | translate}}</div>
-              <div style="cursor: pointer;" class="title_notification"  (click)="readAll()">{{'read.all.noti' | translate}}</div>
+              <div style="cursor: pointer;" class="title_notification"  (click)="readAll()">
+                <img src="../../assets/img/check all.png" class="img_icon" />
+                {{'read.all.noti' | translate}} </div>
             </div>
 
             <div class="drop_notification" *ngFor="let item of listNotification; let i = index" (click)="openLinkNotification(item.notice_url, item.id)" [style.background-color]="item.status==0 ? '#eaf4ff' : ''">
