--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -107,7 +107,7 @@ header {
   background-image: url(../../assets/img/icon_document.svg);
   //border-radius: 50%;
 }
-.social-icons .label{  
+.social-icons .label{
   color: #106DB6;
   margin-left: 10px;
 }
@@ -158,6 +158,14 @@ h3{
 .drop_icon{
   width: 20px
 }
+.div_icon{
+  padding: 0 10px;
+}
+.img_icon{
+  width: 18px;
+  cursor: pointer;
+}
+
 
 //content
 //.content{
@@ -264,7 +272,7 @@ h3{
 }
 .db_document_use{
   height: 22px;
-  width: 16px;   
+  width: 16px;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url(../../assets/img/db_document.svg);
