tăng height dialog lên 10px để ko bị ẩn list dropdown form ủy quyển chuyển tiếp và fix lỗi chưa fix bao giờ: ko auto fill đối với cá nhân có đủ email/sđt form bước 2

--- a/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
+++ b/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
@@ -110,6 +110,9 @@
       </div>
     </div>
 
+    <div class="name-item" *ngIf="this.dataSign.length == 1" style="height:10px">
+    </div>
+
     <div class="name-item" *ngIf="isReqCardId">
       <div class="label_item">{{'cardId' | translate}} <span class="require_star">*</span></div>
       <div class="input-data">
