--- a/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
+++ b/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
@@ -110,7 +110,7 @@
       </div>
     </div>
 
-    <div class="name-item" *ngIf="this.dataSign.length == 1" style="height:10px">
+    <div class="name-item" *ngIf="this.dataSign?.length == 1" style="height:10px">
     </div>
 
     <div class="name-item" *ngIf="isReqCardId">
